--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,8 @@ img {
   background-color: #ffd200;
   border: none;
   padding: 18px 30px;
+  font-size: 13px;
+  outline: none;
 }
 
 .navbar {
@@ -65,6 +67,7 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: 13px;
 }
 
 .navbar__button {
