--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -11,6 +11,8 @@
     &__address
         display: flex
         flex-direction: column
+        font-size: 13px        ащте-ышяуЖ 13зч
+
     &__button
         margin-left: 30px
     &__phone
