--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,7 +1,6 @@
 //    Здесь будут задаваться стили интерфейса    
 body
-    font-family: 'Museo Sans Cyrl'
-    font-weight: 400
+    font-family: sans-serif
 img
     max-width: 100%
 .container
@@ -13,14 +12,7 @@ img
 @media (max-width: 768px)
     .container
         max-width: 580px
-        width: 90%
-@media (max-width: 567px)
-    .container
-        max-width: 580px
-@media (max-width: 321px)
-    .container
-        max-width: 280px
-        width: 100%
+        width: 95%
 .button
     border-radius: 10px
     background-color: $main-color
