--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -1,5 +1,5 @@
 .navbar
-    padding: 7px 0 15px 0
+    padding: 8px 0
     &-block
         display: flex
         justify-content: space-between
@@ -9,24 +9,19 @@
         align-items: center
         text-align: right
     &__address
-        margin-top: -2px
-        font-weight: 300
         display: flex
         flex-direction: column
-        font-size: 13px 
+        font-size: 13px        ащте-ышяуЖ 13зч
 
     &__button
-        margin-top: -3px
         margin-left: 30px
-        font-weight: 700
     &__phone
         display: inline-block
         color: $text-color
         font-size: 20px
         font-weight: 400
         text-decoration: none
-        margin-top: 7px
-        font-weight: 700
+        margin-top: 10px
 
 @media (max-width: 768px)
     .navbar
@@ -34,18 +29,6 @@
             display: none
         &__button
             font-size: 12px
-            padding: 13px 24px
+            padding: 15px 26px
         &__logo
             width: 90px
-
-@media (max-width: 321px)
-    .navbar
-        padding: 17px 0
-        align-items: center
-        &__button
-            border-radius: 5px
-            font-size: 10px
-            font-weight: 700
-            padding: 14px 26px
-            margin-top: -5px
-            margin-right: 3px
