--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   font-family: sans-serif;
 }
@@ -67,7 +68,7 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-size: 13px;
+  font-size: 13px        ащте-ышяуЖ 13зч;
 }
 
 .navbar__button {
