--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -5,12 +5,13 @@
         display: flex
     &-text
         flex-basis: 50%
-        padding-right: 140px
+        padding-right: 20px
         &__title
             font-size: 41px
             font-weight: 600
             line-height: 55px
-            margin-bottom: 40px
+            margin-bottom: 37px
+            margin-left: -2px
         &__subtitle
             font-size: 20px
             font-weight: 600
@@ -24,8 +25,8 @@
             align-items: center
             margin-bottom: 25px
         &__image
-            width: 40px
-            height: 40px
+            width: 35px
+            height: 35px
             border: 2px solid $main-color
             display: flex
             align-items: center
@@ -33,7 +34,12 @@
             border-radius: 50%
             margin-right: 30px
         &__text
-            max-width: 300px
+            max-width: 250px
+            line-height: 24px
+            font-weight: 300
+            font-size: 14px
+    &-img
+        box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.05), 16px 22px 35px rgba(0, 0, 0, 0.05);
 @media (max-width: 1200px)
     .hero
         &-block
