--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,9 @@
 //  Этот файл объединит остальные в 1 css файл style.css
 @import 'colors'
 @import 'interface'
-
+/* Импорт стилей шапки */
 @import 'blocks/navbar'
+/* Импорт стилей главного экрана */
 @import 'blocks/hero'
+/* Импорт стилей блока с предложением */
+@import 'blocks/offer'
