--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+@charset "UTF-8";
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: 'Museo Sans Cyrl';
   font-weight: 400;
@@ -47,6 +53,20 @@ img {
   outline: none;
 }
 
+.button:hover {
+  background: #ffdb33;
+  cursor: pointer;
+}
+
+.input {
+  border: 1px solid #dddddd;
+  padding: 20px 30px;
+  font-size: 15px;
+  border-radius: 10px;
+  font-weight: 300;
+}
+
+/* Импорт стилей шапки */
 .navbar {
   padding: 7px 0 5px 0;
 }
@@ -132,6 +152,7 @@ img {
   }
 }
 
+/* Импорт стилей главного экрана */
 .hero {
   background-color: #f5f5f5;
   padding: 50px 0;
@@ -179,9 +200,13 @@ img {
   margin-bottom: 25px;
 }
 
+.hero-list__item:last-child {
+  margin-bottom: 0;
+}
+
 .hero-list__image {
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   border: 2px solid #ffd200;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -203,7 +228,8 @@ img {
   font-size: 14px;
 }
 
-.hero-img {
+.hero-img img {
+  margin-left: 15px;
   -webkit-box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.05), 16px 22px 35px rgba(0, 0, 0, 0.05);
           box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.05), 16px 22px 35px rgba(0, 0, 0, 0.05);
 }
@@ -220,6 +246,9 @@ img {
   }
   .hero-text {
     padding-right: 10px;
+  }
+  .hero-img {
+    margin-left: 0;
   }
 }
 
@@ -241,6 +270,110 @@ img {
   }
   .hero-list__image {
     margin-right: 15px;
+  }
+}
+
+/* Импорт стилей блока с предложением */
+.offer {
+  background: url("../img/offer-bg.png") right no-repeat;
+  position: relative;
+  padding: 55px 0 90px;
+}
+
+.offer:before {
+  content: '';
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  background-color: #ffffff;
+  top: 0;
+  left: 0;
+}
+
+.offer-block {
+  position: relative;
+  width: 50%;
+  padding-right: 92px;
+}
+
+.offer__title {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 35px;
+  max-width: 360px;
+  margin-bottom: 20px;
+}
+
+.offer__subtitle {
+  display: block;
+  font-weight: 300;
+  font-size: 16px;
+  max-width: 270px;
+  margin-bottom: 34px;
+}
+
+.offer__input {
+  width: 240px;
+  margin-bottom: 30px;
+}
+
+.offer__input:first-child {
+  margin-right: 9px;
+}
+
+.offer__ref {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.offer__text {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 24px;
+}
+
+.offer__text:first-child {
+  margin-right: 70px;
+}
+
+.offer__phone {
+  font-weight: 600;
+  text-decoration: none;
+  color: #000;
+}
+
+.offer__button {
+  width: 100%;
+  min-height: 70px;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 25px;
+}
+
+@media (max-width: 1200px) {
+  .offer {
+    background-size: cover;
+  }
+  .offer__input {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .offer__button {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 768px) {
+  .offer {
+    background: #ffffff;
+  }
+  .offer-block {
+    width: 100%;
+    padding-right: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
