--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -55,18 +55,31 @@
             margin-left: 0
 @media (max-width: 768px)
     .hero
+        padding: 35px 0px 50px 15px
         &-text
+            padding-right: 0
             &__title
                 font-size: 24px
-                line-height: 1.4
+                line-height: 30px
                 margin-bottom: 13px
             &__subtitle
+                margin-top: -5px
+                width: 265px
                 font-size: 16px
                 margin-bottom: 28px
+        &-img
+            margin-top: -5px
+            margin-left: -20px
+            width: 97%
         &-list
             &__item
                 margin-bottom: 20px
             &__text
+                max-width: 200px
                 font-size: 12px
+                line-height: 14px
             &__image
+                margin-left: -5px
                 margin-right: 15px
+                width: 40px
+                height: 40px
