Написан скрипт модального окна с таймером 5 секунд

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,3 +7,5 @@
 @import 'blocks/hero'
 /* Импорт стилей блока с предложением */
 @import 'blocks/offer'
+/* Импорт стилей модального окна */
+@import 'blocks/modal'
