--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -6,8 +6,10 @@ body
     font-weight: 400
 img
     max-width: 100%
-h1, h2, h3, p
+h1, h2, h3, p, ul, li
+    padding: 0
     margin: 0
+
 .container
     width: 1170px
     margin: auto
@@ -44,4 +46,3 @@ h1, h2, h3, p
     &:focus
         outline: none
         border: 1px solid $main-color
-    
