--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -17,8 +17,10 @@
         background-color: #fff
         &__close
             position: absolute
-            top: 0
-            right: 0
+            top: 5px
+            right: 3px
+            background: transparent
+            border: none
         &__offers
             display: none
             width: 600px
