--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -114,6 +114,8 @@
     .modal
         &-dialog
             width: 90%
+            height: 470px
+            overflow: scroll
             &__form
                 width: 100%
                 padding: 20px 20px
@@ -123,15 +125,16 @@
                 &__title
                     font-size: 18px
                     line-height: 22px
-                    margin-bottom: -30px
+                    margin-bottom: -10px
                 &__subtitle
                     margin-bottom: -45px
+                    font-size: 12px
                 &__button
                     font-size: 12px
                     height: 60px
                     margin-top: -20px
                 &__note
                     font-size: 12px
-                    margin-top: -30px
+                    margin-top: -20px
                     &_phone
                         font-size: 18px
