--- a/src/css/style.css
+++ b/src/css/style.css
@@ -668,7 +668,11 @@ h1, h2, h3, p, ul, li {
     width: 90%;
   }
   .modal-dialog__form {
-    padding: 50px 50px;
+    width: 100%;
+    padding: 20px 20px;
+  }
+  .modal-dialog__form-wrap {
+    width: 100%;
   }
 }
 
@@ -676,7 +680,6 @@ h1, h2, h3, p, ul, li {
   .modal-dialog {
     width: 90%;
     height: 470px;
-    overflow: scroll;
   }
   .modal-dialog__form {
     width: 100%;
