--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -109,13 +109,15 @@
         &-dialog
             width: 90%
             &__form
-                padding: 50px 50px
+                width: 100%
+                padding: 20px 20px
+                &-wrap
+                    width: 100%
 @media (max-width: 320px)
     .modal
         &-dialog
             width: 90%
             height: 470px
-            overflow: scroll
             &__form
                 width: 100%
                 padding: 20px 20px
