--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -67,6 +67,10 @@ h1, h2, h3, p, ul, li
             &:hover
                 background: lighten($main-color, 10%)
                 cursor: pointer
+.success
+    margin-bottom: 10px
+    font-size: 16px
+    font-weight: 300
                 
 .input
     border: 1px solid $border-input
