--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -6,6 +6,7 @@
     &-text
         flex-basis: 50%
         padding-right: 20px
+        padding-top: 30px
         &__title
             font-size: 41px
             font-weight: 600
