--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,5 +7,7 @@
 @import 'blocks/hero'
 /* Импорт стилей блока с предложением */
 @import 'blocks/offer'
+/* Импорт блока портфолио */
+@import 'blocks/portfolio'
 /* Импорт стилей модального окна */
 @import 'blocks/modal'
