поправлены отступы у слайдера

--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -4,7 +4,7 @@
     background-size: 50%
     &__title
         // max-width: 600px
-        font-size: 30px
+        font-size: 24px
         font-weight: 600
         line-height: 45px
         margin: auto
@@ -23,3 +23,16 @@
         padding: 0 15px
         &__img
             margin: auto
+@media (max-width: 768px)
+    .portfolio
+        padding: 33px 0 64px
+        &__title
+            font-size: 18px
+            margin-bottom: 43px
+            line-height: 22px
+        &__slider
+            margin-bottom: 44px !important
+    .slider
+        &-item
+            &__img
+                width: 245px
