--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,7 +67,7 @@ h1, h2, h3, p, ul, li {
 .button-top {
   position: fixed;
   bottom: -50px;
-  right: 100px;
+  right: 50px;
   width: 50px;
   height: 50px;
   border: none;
@@ -108,6 +108,12 @@ h1, h2, h3, p, ul, li {
   margin-bottom: 10px;
   font-size: 16px;
   font-weight: 300;
+}
+
+@media (max-width: 768px) {
+  .success {
+    margin-bottom: 0;
+  }
 }
 
 .input {
@@ -316,7 +322,7 @@ h1, h2, h3, p, ul, li {
 
 @media (max-width: 768px) {
   .hero {
-    padding: 35px 0px 50px 15px;
+    padding: 8px 0px 50px 15px;
   }
   .hero-text {
     padding-right: 0;
@@ -504,7 +510,7 @@ h1, h2, h3, p, ul, li {
 }
 
 .portfolio__title {
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 600;
   line-height: 45px;
   margin: auto;
@@ -537,6 +543,23 @@ h1, h2, h3, p, ul, li {
 
 .slider-item__img {
   margin: auto;
+}
+
+@media (max-width: 768px) {
+  .portfolio {
+    padding: 33px 0 64px;
+  }
+  .portfolio__title {
+    font-size: 18px;
+    margin-bottom: 43px;
+    line-height: 22px;
+  }
+  .portfolio__slider {
+    margin-bottom: 44px !important;
+  }
+  .slider-item__img {
+    width: 245px;
+  }
 }
 
 /* Импорт стилей модального окна */
