--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -41,7 +41,7 @@ h1, h2, h3, p, ul, li
     &-top
         position: fixed
         bottom: -50px
-        right: 100px
+        right: 50px
         width: 50px
         height: 50px
         border: none
@@ -72,7 +72,10 @@ h1, h2, h3, p, ul, li
     margin-bottom: 10px
     font-size: 16px
     font-weight: 300
-                
+@media (max-width: 768px)
+    .success
+        margin-bottom: 0
+
 .input
     border: 1px solid $border-input
     padding: 20px 30px
