--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,7 +7,13 @@
 @import 'blocks/hero'
 /* Импорт стилей блока с предложением */
 @import 'blocks/offer'
-/* Импорт блока портфолио */
+/* Импорт стилей блока портфолио */
 @import 'blocks/portfolio'
+/* Импорт стилей блока с ценами */
+@import 'blocks/price'
+/* Импорт стилей блока с шагами */
+@import 'blocks/steps'
+/* Импорт стилей блока с гарантией */
+@import 'blocks/warranty'
 /* Импорт стилей модального окна */
 @import 'blocks/modal'
