--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -3,3 +3,5 @@ $main-color: #ffd200
 $text-color: #333333
 $block-color: #f5f5f5
 $border-input: #dddddd
+$border-card: #e8e8e8
+$warranty-block: #ffc000
