--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,5 +15,7 @@
 @import 'blocks/steps'
 /* Импорт стилей блока с гарантией */
 @import 'blocks/warranty'
+/* Импорт стилей блока с брифом и формой */
+@import 'blocks/brif'
 /* Импорт стилей модального окна */
 @import 'blocks/modal'
