--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,5 +17,7 @@
 @import 'blocks/warranty'
 /* Импорт стилей блока с брифом и формой */
 @import 'blocks/brif'
+/* Импорт стилей подвала */
+@import 'blocks/footer'
 /* Импорт стилей модального окна */
 @import 'blocks/modal'
