--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -7,7 +7,7 @@ body
     font-weight: 400
 img
     max-width: 100%
-h1, h2, h3, h4, p, ul, li
+h1, h2, h3, h4, p, ul, li, hr
     padding: 0
     margin: 0
 
