--- a/src/sass/blocks/_brif.sass
+++ b/src/sass/blocks/_brif.sass
@@ -99,10 +99,53 @@
                 margin-right: 20px
 @media (max-width: 768px)
     .brif
+        height: 1010px
+        padding-top: 50px
+        padding-bottom: 0
         background-position: center top, center bottom
         background-repeat: repeat-x, no-repeat
         background-size: 100% 50%, cover
         &-block
             flex-direction: column
         &__form
-            margin-top: 80px
+            margin-top: 116px
+        &__button
+            margin-top: 0
+            font-size: 14px
+        &__input
+            margin-bottom: 10px
+            font-size: 15px
+    .interview
+        padding-right: 0px
+        &__title
+            margin-top: -5px
+            max-width: 230px
+            font-size: 18px
+            line-height: 21px
+        &__subtitle
+            font-size: 14px
+            max-width: 190px
+            margin-bottom: 39px
+        &-list
+            &__text
+                max-width: 235px
+                &_third
+                    max-width: 200px
+            &__item
+                &:last-child
+                    margin-bottom: 0
+            &__counter
+                margin-right: 10px
+    .form
+        &__title
+            font-size: 18px
+            line-height: 32px
+        &__subtitle
+            font-size: 14px
+        &__description
+            display: block
+            margin-left: auto
+            margin-right: auto
+            font-size: 14px
+            max-width: 140px
+            line-height: 20px
