Интегрирована яндекс метрика

--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -5,6 +5,7 @@
     top: 0
     left: 0
     width: 50%
+    height: 640px
 .contacts
     flex-basis: 50%
     padding-top: 100px
@@ -56,9 +57,9 @@
         
     .contacts
         flex-basis: 100%
-        padding-top: 68px
+        padding-top: 63px
         padding-bottom: 65px
-        padding-left: 0
+        padding-left: 3px
         order: 0
         &__title
             font-size: 18px
@@ -67,10 +68,14 @@
             line-height: 21px
         &-list
             &__item
-                margin-bottom: 33px
+                margin-bottom: 35px
             &__icon
-                margin-right: 13px
+                margin-right: 12px
             &__text
-                line-height: 22px
+                line-height: 26px
                 &-add
-                    line-height: 22px
+                    line-height: 23px
+                    font-size: 16px
+            &__tel
+                font-size: 16px
+                margin-left: 4px
