--- a/src/css/style.css
+++ b/src/css/style.css
@@ -379,7 +379,7 @@ h1, h2, h3, h4, p, ul, li, hr {
 .offer-block {
   position: relative;
   width: 50%;
-  padding-right: 92px;
+  padding-right: 77px;
 }
 
 .offer__title {
@@ -1112,6 +1112,7 @@ h1, h2, h3, h4, p, ul, li, hr {
   top: 0;
   left: 0;
   width: 50%;
+  height: 640px;
 }
 
 .contacts {
@@ -1200,9 +1201,9 @@ h1, h2, h3, h4, p, ul, li, hr {
   .contacts {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
-    padding-top: 68px;
+    padding-top: 63px;
     padding-bottom: 65px;
-    padding-left: 0;
+    padding-left: 3px;
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
             order: 0;
@@ -1214,16 +1215,21 @@ h1, h2, h3, h4, p, ul, li, hr {
     line-height: 21px;
   }
   .contacts-list__item {
-    margin-bottom: 33px;
+    margin-bottom: 35px;
   }
   .contacts-list__icon {
-    margin-right: 13px;
+    margin-right: 12px;
   }
   .contacts-list__text {
-    line-height: 22px;
+    line-height: 26px;
   }
   .contacts-list__text-add {
-    line-height: 22px;
+    line-height: 23px;
+    font-size: 16px;
+  }
+  .contacts-list__tel {
+    font-size: 16px;
+    margin-left: 4px;
   }
 }
 
